# bintracker-prototype

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  bintracker.cbp  bintracker.cpp  bintracker.h  helper_func.cpp  helper_func.h  makefile  makefile.mingw  makefile.travis_mingw  settings.ini
data_as/: data_as.cpp  mdatas.h
docs/: index.md  manual.tex
docs/data/raw/: overview.xcf
docs/engines/: Pytha.txt  betaphase.txt  phaseSqueek.txt  phaserX.txt
docs/licenses/: LICENSE  license_pugixml.txt
engines/BetaPhase/: equates.h  main.asm
engines/PhaseSqueek/: equates.h  main.asm
engines/PhaserX/: equates.h  main.asm
engines/Pytha/: equates.h  main.asm
engines/config/: BetaPhase.mdconf  PhaseSqueek.mdconf  PhaserX.mdconf  Pytha.mdconf  configlist
gui/: elements.cpp  events.cpp  file_io.cpp  gui.cpp  gui.h  input.cpp  keyhandler.cpp  mousehandler.cpp  status.cpp  work_tune.cpp  worktune.h
libmdal/: blocks.cpp  command.cpp  config.cpp  field.cpp  mdal.h  module.cpp  pugixml.cpp  pugixml.hpp  sequence.cpp
resources/gui/: arrow_down.tga  arrow_left.tga  arrow_right.tga  arrow_up.tga  button_clone.tga  button_expand.tga  button_insert.tga  button_looppoint.tga  button_minus.tga  button_plus.tga  button_remove.tga  button_shrink.tga  copy.tga  cut.tga  cut_and_move_up.tga  gohufont.tga  insert.tga  new_file.tga  open.tga  paste_over.tga  play.tga  play_from_start.tga  play_pattern.tga  redo.tga  save.tga  save_as.tga  stop.tga  undo.tga
songs/examples/: betaphase-demo.mdal  botb-phx.mdal  last_summer.mdal  phaserx-demo.mdal  phasesqueek-demo.mdal  pytha-demo.mdal
sound_emul/: sound_emul.cpp  sound_emul.h
sound_emul/machines/: vm.h  zxspectrum48.cpp  zxspectrum48.h
sound_emul/machines/CPU/: z80.cpp  z80.h  z80instructions.cpp
